# calendaronline

./: .gitignore  README.md  docker-compose.yml  docker_bash.sh  manage.py  update_preview_images.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint.yml  release.yml
nginx/: Dockerfile  calendaronline.nginx.conf  nginx.conf
web/: .dockerignore  Dockerfile  calendaronline.uwsgi.ini  manage.py  pyproject.toml  requirements.txt  startup.prod.sh  startup.sh
web/Docker/: startup.prod.sh
web/calendaronline/: asgi.py  settings.py  urls.py  wsgi.py
web/creator/: urls.py  views.py
web/creator/fotocalendar/: creator.py  fotocalendar.py  icsparser.py
web/creator/fotocalendar/bo/: config.py
web/creator/fotocalendar/templates/: design1.py  design2026.py  fullscreen.py  landscape.py  landscape_modern.py  portrait.py  vintage.py
web/creator/static/: calendaronline.js  ribbon.css
web/creator/templates/: master.html
web/creator/templates/creator/: card_template.html  faq.html  impressum.html  months.html  options.html  options_font.html  options_general.html  ribbon.html  start.html
web/creator/templatetags/: prefix.py
