[project]
# see https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "calendaronline"
dynamic = ["version"]
authors = [{name = "Daniel Schlich", email = "info@k51.de"}]
license = "GPL-3.0"
# license-files = ["LICENSE.md"]
description = "A simple tool to create beautiful photo calendars as PDF files for self-printing."
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.4",
    "fpdf2==2.8.7",
    "Pillow==12.2.0",
    "python-dateutil",
    "icalevents==0.3.1",
    "uharfbuzz==0.53.7",
    "orjson==3.11.8",
    "gunicorn==25.3.0",
    "pdf2image==1.17.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "calendaronline*",
    "creator*"
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
